Fix notification content white spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1511,6 +1511,8 @@
 }
 .tm-quark-notification__content {
   color: #fff;
+  position: relative;
+  white-space: nowrap;
   width: 100%;
 }
 .tm-quark-textarea {
