--- a/src/components/Notification.less
+++ b/src/components/Notification.less
@@ -299,6 +299,8 @@
 
   &__content {
     color: #fff;
+    position: relative;
+    white-space: nowrap;
     width: 100%;
   }
 }
